src/objects/skuid__Feedback__c.object
<CustomObject>
    <fields>
        <fullName>skuid__Is_Current__c</fullName>
        <formula>skuid__Page__r.LastModifiedDate == skuid__Page_Last_Modified_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skuid__Page_Last_Modified_Date__c</fullName>
        <label>Page Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>skuid__Page__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Skuid page the user was on when feedback was captured.</description>
        <label>Page</label>
        <referenceTo>skuid__Page__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>skuid__Skuid_Version__c</fullName>
        <description>The version of Skuid the feedback was captured in.</description>
        <label>Skuid Version</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Status__c</fullName>
        <description>The status of the feedback record.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>skuid__Type__c</fullName>
        <description>The type of feedback being provided.</description>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Question</fullName>
                    <default>true</default>
                    <label>Question</label>
                </value>
                <value>
                    <fullName>Idea</fullName>
                </value>
                <value>
                    <fullName>Problem</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feedback</label>
    <nameField>
        <displayFormat>UF-{YY}{MM}{DD}{00000}</displayFormat>
        <label>Case Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>